--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: bitespeed-api
     runtime: docker
+    buildCommand: ./gradlew build
+    startCommand: java -jar build/libs/*.jar
     plan: free
     envVars:
       - key: DATABASE_URL
