--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 #spring.application.name=Bitespeed-Customer-Identity-Tracking-Solution
 #server.port=8081
-server.port=${PORT:8080}
+#server.port=${PORT:8080}
 #spring.datasource.username=root
 #spring.datasource.password=root
 #spring.datasource.url=jdbc:mysql://localhost:3000/identity
-spring.datasource.url=${DATABASE_URL}
+#spring.datasource.url=${DATABASE_URL}
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.SQL=DEBUG
+
+#PostgreSQL on Render
+spring.datasource.url=jdbc:${DATABASE_URL}?sslmode=require
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
