--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 #logging.level.org.hibernate.SQL=DEBUG
 
 #PostgreSQL on Render
-spring.datasource.url=jdbc:${DATABASE_URL}?sslmode=require
+spring.datasource.url=jdbc:${DATABASE_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
