--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,11 @@
 #logging.level.org.hibernate.SQL=DEBUG
 
 #PostgreSQL on Render
-spring.datasource.url=jdbc:${DATABASE_URL}
+server.port=${PORT:8080}
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
